# flippy

./: .env.sample  .gitignore  .golangci.yml  .pre-commit-config.yaml  README.md  archive_book.sh  build_wasm.sh  config.json.sample  docker-compose-test.yml  docker-compose-worker.yaml  docker-compose.yaml  dummy.py  go.mod  go.sum  main.py  openings.csv  openings.json  piccolo_conf.py  pyproject.toml  schema.sql  test.Dockerfile  test.sh  worker.Dockerfile
.github/workflows/: workflow.yml
api/: docker-compose-test.yml  go.mod  go.sum  test.Dockerfile  test.sh  test_data.sql
api/cmd/server/: main.go
api/internal/app/: app.go
api/internal/config/: config.go
api/internal/constants/: redis.go
api/internal/db/: db.go  postgres.go  redis.go
api/internal/handlers/: client.go  evaluation.go  html.go
api/internal/middleware/: auth.go
api/internal/models/: api.go  api_test.go  normalized_position.go  normalized_position_test.go  position.go  position_test.go
api/internal/repository/: client.go  evaluation.go
api/internal/routes/: html.go  routes.go  static.go
api/internal/services/: postgres.go  redis.go  services.go
api/internal/tests/: config.go  integration_test.go  main_test.go  root_test.go  static_test.go  version_test.go
api/static/: clients.html
cmd/compute_missing/: main.go
cmd/evaluate/: main.go
cmd/gui/: main.go
cmd/learn_client/: main.go
cmd/load_pgn/: main.go
cmd/server/: main.go
cmd/show_board/: main.go
db_migrations/: piccolo_app.py
db_migrations/piccolo_migrations/: db_migrations_2024_04_26t21_12_35_409564.py
internal/: app.go
internal/api/: client.go  handlers.go  queries.go  services.go  types.go  types_test.go
internal/book/: api_client.go  learn_client.go
internal/cmd/learn/: client.go
internal/config/: config.go  log.go
internal/edax/: cache.go  edax_manager.go  manager.go  parser.go  parser_test.go  process.go  types.go
internal/gui/: controller.go  draw.go  evaluation.go  types.go  window.go
internal/gui/modes/: evaluate.go  game.go  mode.go
internal/middleware/: auth.go  logging.go
internal/models/: api.go  api_test.go  board.go  board_test.go  cache.go  game.go  game_metadata.go  game_metadata_test.go  game_test.go  normalized_position.go  normalized_position_test.go  position.go  position_test.go
internal/models/pgn_samples/: playok_xot.pgn
internal/othello/: board.go  board_test.go  game.go  game_metadata.go  game_metadata_test.go  game_test.go  normalized_position.go  normalized_position_test.go  position.go  position_test.go
internal/othello/pgn_samples/: flyordie_2025.pgn
internal/repository/: client.go  evaluation.go
internal/routes/: routes.go
internal/routes/api/: learn_clients.go  positions.go  routes.go
internal/routes/book/: routes.go
internal/routes/clients/: routes.go
internal/routes/game/: routes.go
internal/routes/static/: routes.go
internal/routes/version/: routes.go
internal/routes/ws/: routes.go
internal/services/: postgres.go  redis.go  services.go
internal/tests/: config.go
internal/tests/routes/: routes_test.go
internal/wasm/evaluate/: evaluate.go
internal/ws/: handler.go  models.go
nuxtjs/: eslint.config.js  nuxt.config.ts  package-lock.json  package.json
nuxtjs/assets/css/: global.css
nuxtjs/components/: OthelloBoard.module.css  OthelloBoard.vue
nuxtjs/composables/: useWebSocket.ts  websocket.ts
nuxtjs/pages/: index.module.css  index.vue
nuxtjs/stores/: game.ts
nuxtjs/types/: Board.ts
python/flippy/: pyproject.toml
src/flippy/: arguments.py  board.py  config.py  db.py  game.py  main.py  openings_training.py  pgn_organizer.py  watch.py  window.py
static/: flippy_wasm.js  game.css  game.html  game.js
tests/: test_openings.py
tests/edax/: test_types.py
tests/othello/: test_bitset.py  test_board.py  test_game.py  test_position.py
tests/pgn_samples/: playok_normal.pgn
tests/training/: test_exercise.py  test_exercise_list.py
wasm/: Cargo.toml  build.sh
wasm/src/: bitset.rs  bot.rs  get_flipped.rs  get_moves.rs  lib.rs  position.rs  wasm.rs
(+93 files in other folders)
