[project]
name = "flippy"
version = "0.1.0"
description = "Tools for the othello boardgame"
authors = [
    {name = "Luuk Verweij",email = "luuk_verweij@msn.com"},
]
dependencies = [
    "pygame>=2.5.2",
    "pyautogui>=0.9.54",
    "typer>=0.9.0",
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
gui = {call = "flippy.main:gui"}
organize-pgn = {call = "flippy.main:organize_pgn"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=3.6.1",
    "pdbpp>=0.10.3",
    "ruff>=0.2.1",
    "types-PyAutoGUI>=0.9.3.20240106",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0.20240311",
]
