[project]
name = "flippy"
version = "0.1.0"
description = "Tools for the othello boardgame"
authors = [
    {name = "Luuk Verweij",email = "luuk_verweij@msn.com"},
]
dependencies = [
    "pygame>=2.5.2",
    "pyautogui>=0.9.54",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "psycopg2>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
gui = "python src/flippy/commands/gui.py"
organize-pgn = "python src/flippy/commands/pgn_organizer.py"
analyze-pgn =  "python src/flippy/commands/pgn_analyzer.py"
recent-games = "python src/flippy/commands/recent_games.py"
book = "python src/flippy/commands/book.py"
unique-positions = "python src/flippy/commands/unique_positions.py"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=3.6.1",
    "pdbpp>=0.10.3",
    "ruff>=0.2.1",
    "types-PyAutoGUI>=0.9.3.20240106",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0.20240311",
    "types-psycopg2>=2.9.21.20240417",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["flippy"]
known-third-party = ["*"]
